--- a/css/ebi-css-build/_ebi_utility_styles.scss
+++ b/css/ebi-css-build/_ebi_utility_styles.scss
@@ -3,9 +3,11 @@
   .uppercase { text-transform: uppercase; }
   .lowercase { text-transform: lowercase; }
 
-  .serif { font-family: $body-font-family-serif;  font-size: 1.1rem; }
-  .sans-serif { font-family: $body-font-family;  font-size: 1.1rem; }
-  .serif .sans-serif { font-size: 1rem; } // reset font size when nesting
+  .font-embl { font-family: $body-font-family; }
+  .font-code { font-family: $code-font-family; }
+  .font-serif, .serif { font-family: $body-font-family-serif;  }
+  .font-sans-serif, .sans-serif { font-family: $body-font-family;  }
+  // .serif .sans-serif { font-size: 1rem; } // reset font size when nesting
 
   .block { display: block; }
   .clear { clear: both; }
