Shrink table font size to .9rem
for https://github.com/ebiwd/EBI-Icon-fonts/issues/8

--- a/css/ebi-css-build/_ebi_table_styles.scss
+++ b/css/ebi-css-build/_ebi_table_styles.scss
@@ -1,6 +1,7 @@
 @mixin ebi-table-styles {
   table {
     font-family: $table-font-family;
+    font-size: $table-font-size;
   }
   // padding for page content
   body.table-layout table {
