--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -42,6 +42,7 @@ $body-font-family: 'Fira Sans', Helvetica, Arial, sans-serif;
 $body-font-family-serif: 'EB Garamond', 'georgia', serif;
 $code-font-family: 'Fira Code', Consolas, 'Liberation Mono', Courier, monospace;
 $table-font-family: $code-font-family;
+$table-font-size: 0.9rem;
 
 // Set foundation colours
 $foundation-palette: (
