Improve sass clustering

--- a/css/ebi-css-build/_ebi_code_styles.scss
+++ b/css/ebi-css-build/_ebi_code_styles.scss
@@ -7,6 +7,7 @@
     border: 1px solid #cacaca;
     padding: 0.125rem 0.3125rem 0.0625rem;
     overflow-x: auto;
+    font-size: .95rem;
   }
   pre {
     overflow-x: auto;
