--- a/css/ebi-css-build/_embl_selector.scss
+++ b/css/ebi-css-build/_embl_selector.scss
@@ -7,122 +7,123 @@
 /// Classses to theme the embl dropdown selector for the .masthead-black-bar
 @mixin embl-selector {
 
-  // peeking animation for black bar
-  transition: border-width 0.5s ease-in-out;
-  border-top: 0 solid #EEE;
+  .masthead-black-bar {
+    // peeking animation for black bar
+    transition: border-width 0.5s ease-in-out;
+    border-top: 0 solid #EEE;
 
-  &.peek {
-    border-top: 1rem solid #EEE;
-  }
-
-
-  li.embl-selector {
-    margin-left: 0.5rem;
-    border-left: .5px solid rgba(255,255,255,.5);
-    padding-left: 1.5rem;
-  }
-
-  .embl-bar {
-    height: 0; overflow: hidden;
-    display: none;
-    background-color: #eee;
-    color: #222;
-    // color: #fff;
-    a {
-      color: #222;
-      // border-bottom: 1px dashed #fff;
+    &.peek {
+      border-top: 1rem solid #EEE;
     }
-    a:hover { border-bottom: 1px solid #fff; }
-    .youarehere {
-      margin-left: -1.5rem;
+
+    li.embl-selector {
+      margin-left: 0.5rem;
+      border-left: .5px solid rgba(255,255,255,.5);
+      padding-left: 1.5rem;
     }
-  }
 
-  .embl-bar.active {
-    display: block;
-    height: auto; overflow: visible;
-  }
-
-  .dropdown-pane.embl-dropdown {
-    left: 0; //fix position of menu, to prevent horizontal scrolling of page
-
-    background-color: $ebi-colour-dark;
-    background-position: 100% 100%;
-    background-repeat: no-repeat;
-    color: #fff;
-    min-width: 30em;
-    left: 0; //fix position of menu, to prevent horizontal scrolling of page
-
-    h6 { color: white; font-weight: 700; }
-    .button { color: #007c82; background: #fff; }
-    a { border-bottom: 1px dashed $ebi-colour-dark-grey; }
-    a:hover { border-bottom: 1px solid $ebi-colour-dark-grey; }
-  }
-  @media screen and (max-width: 39.9375em) {
-    .dropdown-pane.embl-dropdown {
-      // do not show embl-dropdown on small screens at all
+    .embl-bar {
+      height: 0; overflow: hidden;
       display: none;
-      width: 0 !important;
-      overflow: hidden;
+      background-color: #eee;
+      color: #222;
+      // color: #fff;
+      a {
+        color: #222;
+        // border-bottom: 1px dashed #fff;
+      }
+      a:hover { border-bottom: 1px solid #fff; }
+      .youarehere {
+        margin-left: -1.5rem;
+      }
     }
-  }
 
-  .embl-selector.embl-ebi {
-    .button,
-    .button.hover,
-    .button:focus,
-    .button:hover {
-      background: no-repeat 4px 50% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
-      padding-left: 95px;
-      background-size: 100px;
-    }
-  }
-
-  .embl-selector {
-    .button,
-    .button.hover,
-    .button:focus,
-    .button:hover {
-      background: no-repeat 100% 50% url(https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-white.svg);
-      padding-left: 2px;
-      background-size: 62px;
-      width: 63px;
-      // background: no-repeat 4px 50% url("https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-white.svg");
-      // padding-left: 58px;
-      // background-size: 72px;
-      padding-right: 17px;
-      line-height: 12px;
-    }
-    .button.hover,
-    .button:hover { background-color: transparent; }
-    .button[aria-expanded="false"]::after {
-      content: '';
+    .embl-bar.active {
       display: block;
-      width: 0;
-      height: 0;
-      border: inset 4px;
-      border-color: #fff transparent transparent;
-      border-top-style: solid;
-      position: absolute;
-      top: 18px;
-      margin-left: 55px;
+      height: auto; overflow: visible;
     }
-  }
-  .embl-selector.active {
-    background-color: #ddd;
-    padding-right: 1rem;
-    .button,
-    .button.hover,
-    .button:focus,
-    .button:hover {
-      background-image: url(https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-black.svg);
-    }
-  }
 
-  // begin to hide bits of dropdown toggle as screen shrinks
-  @media screen and (max-width: 53em) {
-    .embl-selector .button { width: 0px; padding-right:0; overflow: hidden;}
-    .embl-selector .button:after { display: none; }
-    nav ul.menu li a { padding-right: .5rem; padding-left: .5rem;}
+    .dropdown-pane.embl-dropdown {
+      left: 0; //fix position of menu, to prevent horizontal scrolling of page
+
+      background-color: $ebi-colour-dark;
+      background-position: 100% 100%;
+      background-repeat: no-repeat;
+      color: #fff;
+      min-width: 30em;
+      left: 0; //fix position of menu, to prevent horizontal scrolling of page
+
+      h6 { color: white; font-weight: 700; }
+      .button { color: #007c82; background: #fff; }
+      a { border-bottom: 1px dashed $ebi-colour-dark-grey; }
+      a:hover { border-bottom: 1px solid $ebi-colour-dark-grey; }
+    }
+    @media screen and (max-width: 39.9375em) {
+      .dropdown-pane.embl-dropdown {
+        // do not show embl-dropdown on small screens at all
+        display: none;
+        width: 0 !important;
+        overflow: hidden;
+      }
+    }
+
+    .embl-selector.embl-ebi {
+      .button,
+      .button.hover,
+      .button:focus,
+      .button:hover {
+        background: no-repeat 4px 50% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
+        padding-left: 95px;
+        background-size: 100px;
+      }
+    }
+
+    .embl-selector {
+      .button,
+      .button.hover,
+      .button:focus,
+      .button:hover {
+        background: no-repeat 100% 50% url(https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-white.svg);
+        padding-left: 2px;
+        background-size: 62px;
+        width: 63px;
+        // background: no-repeat 4px 50% url("https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-white.svg");
+        // padding-left: 58px;
+        // background-size: 72px;
+        padding-right: 17px;
+        line-height: 12px;
+      }
+      .button.hover,
+      .button:hover { background-color: transparent; }
+      .button[aria-expanded="false"]::after {
+        content: '';
+        display: block;
+        width: 0;
+        height: 0;
+        border: inset 4px;
+        border-color: #fff transparent transparent;
+        border-top-style: solid;
+        position: absolute;
+        top: 18px;
+        margin-left: 55px;
+      }
+    }
+    .embl-selector.active {
+      background-color: #ddd;
+      padding-right: 1rem;
+      .button,
+      .button.hover,
+      .button:focus,
+      .button:hover {
+        background-image: url(https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-black.svg);
+      }
+    }
+
+    // begin to hide bits of dropdown toggle as screen shrinks
+    @media screen and (max-width: 53em) {
+      .embl-selector .button { width: 0px; padding-right:0; overflow: hidden;}
+      .embl-selector .button:after { display: none; }
+      nav ul.menu li a { padding-right: .5rem; padding-left: .5rem;}
+    }
   }
 }
