--- a/css/ebi-css-build/ebi-global.scss
+++ b/css/ebi-css-build/ebi-global.scss
@@ -1,445 +1,36 @@
 // Various includes
 @import 'ebi_theme_settings';
-@import 'tag';
+@import 'ebi_base_styles';
 @import 'ebi_utility_styles';
 @import 'ebi_table_styles';
 @import 'ebi_print_styles';
 @import 'ebi_masthead_styles';
 @import 'ebi_footer_styles';
+@import 'ebi_related_pattern';
 @import 'ebi_code_styles';
 @import 'ebi_color_styles';
 @import 'ebi_clearable_inputs';
+@import 'ebi_tag';
 @import 'embl_selector'; // EMBL Dropdown selector for .masthead-black-bar
 
 // simple imports for the font while we test
 @import 'https://code.cdn.mozilla.net/fonts/fira.css';
 @import 'https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css';
 
-@mixin ebi-base-styles {
-  body h1, body h2, body h3, body h4, body h5 { font-weight: 300; letter-spacing: -.5px}
-
-  li { word-wrap: break-word; }
-
-  a,
-  a:visited {
-    border-bottom-width: 1px;
-    border-bottom-style: dotted;
-    border-bottom-color: inherit;
-  }
-  a.active,
-  a:hover,
-  a:active { border-bottom-style: solid; }
-  a.special {
-    font-style: italic;
-    border-bottom-style:double;
-    border-bottom-width: 3px;
-    padding: 0.1em 0.3em;
-  }
-  a:hover { opacity: .9; }
-  a.image,
-  a.image:visited { border-bottom: 0 none; }
-  a.button, a.button:visited { color: $ebi-colour-light; white-space: nowrap; }
-
-  // Colour - defaults to be reset by custom stylesheet
-  h1, h2, h3, h4, h5, h6 { color: $body-font-color; }
-
-  h4 { color: $ebi-colour-medium-grey; }
-  a { color:#3e3e3e; }
-  a:visited { color: $ebi-colour-dark-grey; }
-  a:hover,
-  a:focus,
-  a:active {
-    color: #000;
-  }
-
-  .text-highlight {
-    color: $ebi-colour-light;
-    background-color: $ebi-colour-dark-grey;
-    padding: 0 0.2em;
-  }
-
-  .callout { background: $ebi-colour-light-grey; border: none; } div.warning { border: none; }
-
-  @include ebi-color-styles;
-  @include ebi-masthead-styles;
-
-  /* accomodate legend.label */
-  legend.label { display: block; }
-
-  /* Secondary menu */
-  ul.menu.secondary-menu,
-  .secondary-menu ul.menu {
-    padding-bottom: 1rem;
-
-    a, a:hover { border-bottom: none; }
-    li { display: inline-block; } // renders links as bricks, not table cells
-  }
-
-  /* List ...... leaders */
-  ul.leaders {
-    max-width: 40em;
-    padding: 0;
-    overflow-x: hidden;
-    list-style: none;
-
-    li:before {
-      float: left;
-      width: 0;
-      white-space: nowrap;
-      content:
-         ". . . . . . . . . . . . . . . . . . . . "
-         ". . . . . . . . . . . . . . . . . . . . "
-         ". . . . . . . . . . . . . . . . . . . . "
-         ". . . . . . . . . . . . . . . . . . . . ";
-    }
-
-    span:first-child {
-      padding-right: 0.33em;
-      background: white;
-    }
-    span + span {
-      float: right;
-      padding-left: 0.33em;
-      background: white;
-    }
-  }
-
-  // List: inline horizontal
-  ul.inline li { display: inline-block; }
-  // List: icon bullets
-  li.icon-bullet { list-style-type: none; text-indent: -1.3em; }
-
-  // Badge list
-  ul li a.badge,
-  ul li.badge { font-size: inherit; }
-
-  // Callout tiny
-  .callout.tiny { padding: 0rem; }
-
-  // Breadcrumbs
-  .breadcrumbs { padding-top: 0.5rem; }
-  body .breadcrumbs a { color: $medium-gray; border-bottom: none; }
-
-  @include ebi-code-styles;
-
-  /* Custom styling for different local masthead */
-  #local-title.logo-only img,
-  #local-title.logo-title img,
-  #local-title.logo-title-strapline img { float: left; margin: 1em 0.69em 0.69em; }
-  #local-title.logo-title span,
-  #local-title.logo-title-strapline span { display:block; margin: 1em 0 0.69em 0; float:left; }
-  #local-title.logo-title span { margin-top: 2.3em; }
-  #local-title.logo-title h1,
-  #local-title.logo-title-strapline h1 { display: inline; line-height: 100%; }
-  #local-title.logo-title-strapline h1 { font-size: 270%; }
-  #local-title.logo-title-strapline p { display: inline; font-size: 123.1%; }
-
-  @include ebi-footer-styles;
-
-  /* Compact vertical menu trees */
-  ul.simple.vertical.menu {
-    margin-left: 0;
-    font-size: .9rem;
-    li {
-      margin-bottom: .5rem;
-      display: block;
-      > a { display: inline; padding: 0; }
-      > a.active:before { content: "9 "; font-family: 'EBI-Functional'; }
-      > ul.simple.menu { margin: 0.5rem; }
-    }
-  }
-
-  // cookie banner
-  .cookie-banner {
-    position:fixed;
-    background-color: $ebi-colour-dark;
-    width:100%;
-    padding: $global-padding;
-    left:0;
-    bottom:0;
-    color:#eee;
-    a, a:hover { color: $ebi-colour-light; }
-    .text { margin-right:2em; }
-  }
-
-  // MISC TWEAKS
-  // ul.menu { font-size: .9rem; }
-
-  // image tweaks
-  body .thumbnail { box-shadow: none; }
-  .caption {
-    line-height: 1.3em;
-    font-family: sans-serif;
-    font-size: .85rem;
-    opacity: .8;
-    overflow: hidden;
-  }
-
-  // image .highlight-caption
-  a.highlight-caption,
-  .highlight-caption {
-    z-index: 1;
-    position: relative;
-    top: -3rem;
-    color: #fff;
-    padding: .25rem .5rem;
-    background: #333;
-    border-bottom: none;
-  }
-  .highlight-caption.highlight-caption-big {
-    top: -8rem;
-    display: inline-block;
-    margin-bottom: -5rem;
-  }
-  // better positioning when combined with position-relative
-  .position-relative > .highlight-caption.highlight-caption-big {
-    position: absolute;
-    top: initial;
-    bottom: 3%;
-    margin-bottom: 0;
-  }
-
-  // image overlays
-  .medium-4 > .with-overlay,
-  .medium-3 > .with-overlay {
-    // sidebar overlays should always have a bottom margin
-    margin-bottom: .75rem;
-  }
-
-  // overlay pattern slated for removal
-  // was only used on EBI corporate site
-
-  // .with-overlay {
-  //   position: relative;
-  //
-  //   .caption {
-  //     background: -webkit-linear-gradient(transparent, rgba(0,0,0,0.7));
-  //     background: -o-linear-gradient(transparent, rgba(0,0,0,0.7));
-  //     background: -moz-linear-gradient(transparent, rgba(0,0,0,0.7));
-  //     background: linear-gradient(transparent, rgba(0,0,0,0.7));
-  //     position: absolute;
-  //     top:0;
-  //     height: 100%;
-  //     width: 100%;
-  //     padding: 5% 5%;
-  //     color: #fff;
-  //     opacity: 1;
-  //     text-shadow: 0 2px 0 rgba(0,0,0,.8);
-  //
-  //     &:hover {
-  //       background: -webkit-linear-gradient(rgba(0,0,0,0.6), rgba(100,100,100,0.3));
-  //       background: -o-linear-gradient(rgba(0,0,0,0.6), rgba(100,100,100,0.3));
-  //       background: -moz-linear-gradient(rgba(0,0,0,0.6), rgba(100,100,100,0.3));
-  //       background: linear-gradient(rgba(0,0,0,0.6), rgba(100,100,100,0.3));
-  //       color: #FFF;
-  //
-  //       > a.inner { color: #fff;  }
-  //     }
-  //     .inner {
-  //       position: absolute;
-  //       bottom: 5%;
-  //       width: 95%;
-  //       padding-right: 4rem;
-  //     }
-  //     > a.inner {
-  //       color: #fff;
-  //       text-decoration: none;
-  //       border-bottom: none;
-  //       font-size: 1.4rem;
-  //       line-height: 1.4em;
-  //       padding-top: 50%;
-  //     }
-  //     > a:after { font-family: "EBI-Functional"; content: " >"; display: inline-block; float: right; font-size: 1.7rem; position: relative; top: -.1rem; left: 2rem;}
-  //   }
-  //
-  // } // END .with-overlay
-
-  // dl
-  dd { padding-bottom: 1rem; }
-
-
-  body .has-tip { font-weight: normal; line-height: 1em; background: rgba(0,0,0,.03); }
-
-  /* Float left for pullquotes */
-  blockquote.float-left {
-    border-left: none;
-    text-align: right;
-    border-right: 1px solid #cacaca;
-    margin-right: 1rem;
-  }
-
-  blockquote.lead { margin-left: 1rem; border-left-color: rgba(0,0,0,0); border-right-color: rgba(0,0,0,0);}
-  blockquote.lead.quote:before {
-    content: "“";
-    position: relative;
-    top: -1.5rem;
-    left: -1.5rem;
-    font-size: 3rem;
-    display: block;
-    height: 0px;
-  }
-
-  /* bigger first line for some blockquotes */
-  blockquote.drop-quote::first-line {
-    font-size: 1.6rem;
-  }
-
-  // tweaks to foundation's mobile settings
-  @media screen and (max-width: 75rem) {
-    body {
-      ul.dropdown.menu.float-left { padding-left: .5rem; }
-      h1 { font-size: 2.5rem; }
-      h2 { font-size: 2rem; }
-      h3 { font-size: 1.5rem; }
-      h4 { font-size: 1.25rem; }
-    }
-  }
-
-  // Orbit thumbnails
-  nav.orbit-bullets button.thumbnail { width: auto; border-radius: 0; }
-  nav.orbit-bullets button.thumbnail.is-active { box-shadow: 0 0 1px  #444; }
-  nav.orbit-bullets button.thumbnail.image {width: 4rem; height: 3rem; overflow: hidden;}
-  nav.orbit-bullets button.thumbnail.image > img { min-width: 6rem; margin-left: -2rem; }
-
-  // Disable padding on left or right of foundation columns
-  .columns.no-pad-right { padding-right: 0; }
-  .columns.no-pad-left { padding-left: 0; }
-
-  // mono-space fonts are fat
-  // code { font-size: .95rem; }
-
-  // Button
-  //
-  // Your standard button suitable for clicking.
-  //
-  // :hover   - Highlights when hovering.
-  //
-  // Markup: documentation/button.html
-  //
-  // Style guide: components.button
-  .button:focus,
-  .button:hover,
-  .button.hover { opacity: .8;}
-
-  // tabs
-  .tabs-title > {
-    a { border-bottom: none; }
-    a:hover {
-      background-color: $ebi-colour-main;
-      color: $ebi-colour-white;
-    }
-    a:focus,
-    a[aria-selected='true'] {
-      color: $ebi-colour-white;
-      background: $ebi-colour-dark-grey;
-    }
-  }
-
-  @include ebi-related-pattern;
-
-  // button grid
-  // Wrap a groupd of a.button.columns with div.button-grid to make a, you guessed it: grid
-  .button-grid a.button.columns {
-    margin-bottom: 1px;
-    border: 0; //unset all other borders; see https://github.com/ebiwd/EBI-Framework/issues/95
-    border-right: 1px solid #fff;
-  }
-
-  // intro unit
-  .intro-unit {
-    padding-top: 3rem;
-    padding-bottom: 2rem;
-    h2 { font-size: 3rem; margin-bottom: 0; }
-    h3 { padding-bottom: 1rem; }
-    .lead { color: $secondary-color; margin-bottom: .5rem; }
-  }
-
-  // external links
-  a.external{
-    &:after {
-      content: " x";
-      font-family: "EBI-Generic";
-      font-size: .65rem;
-      position: relative;
-      top: -1px;
-      margin-left: .4rem;
-    }
-  }
-
-  // read more
-  a.read-more,
-  a.readmore,
-  a.more {
-    white-space: nowrap;
-    &:after {
-      content: " >";
-      font-family: "EBI-Functional";
-      font-size: .85em;
-    }
-  }
-
-  // wide screen support
-  @media screen and (min-width: 40em) {
-    body.full-width .row,
-    body.full-width .row .row {
-      max-width: 150rem;
-    }
-  }
-
-  // tag
-  @include ebi-tag;
-
-  // defenition lists
-  dl dt {
-    font-weight: 400;
-    font-size: 1.1rem;
-    a { border-bottom: none; color: $ebi-colour-dark-grey; }
-    a:hover { border-bottom: 1px dotted; }
-  }
-
-}
-
-@mixin ebi-related-pattern {
-  // related / popular box
-  .related {
-    background: $ebi-colour-dark;
-    margin-top: 4.25rem;
-    color: $ebi-colour-white;
-    padding: .5rem 0 0 1.1rem;
-
-    h3 {
-      color: $ebi-colour-white;
-      background: none;
-      margin-bottom: 0;
-    }
-
-    ul {
-      margin-left: 0;
-      margin-top: .25rem;
-
-      li {
-        display:inline-block;
-        width: 49%;
-        padding-right: 0;
-        font-size: .9rem;
-        min-width: 7rem; // for odd mid-break points, ensure the text doesn't get too small
-
-        a { color: $ebi-colour-white; border-bottom:none; }
-        a:hover { text-decoration: underline; }
-        a:after { content: " >"; }
-      }
-    }
-    ul:after { content: " "; height: .5rem; display: block; clear: both; } // a clearfix to show background
-  }
-}
-
 // ebi-styles
 @if $include-ebi-global-styles {
   @include ebi-base-styles;
   @include ebi-utility-styles;
+  @include ebi-masthead-styles;
+  @include ebi-footer-styles;
+  @include ebi-color-styles;
+  @include embl-selector;
 }
 @if $include-ebi-extra-styles {
   @include ebi-print-styles;
   @include ebi-clearable-inputs;
   @include ebi-table-styles;
+  @include ebi-code-styles;
+  @include ebi-related-pattern;
+  @include ebi-tag;
 }
