--- a/css/ebi-css-build/foundation/_settings-extras.scss
+++ b/css/ebi-css-build/foundation/_settings-extras.scss
@@ -8,7 +8,7 @@
 @import '../ebi_dev_note';
 
 // Include the common settings
-@import 'settings-common';
+@import 'settings-common-foundation';
 
 // 38. Invoke build process
 // ------------------------
