--- a/css/ebi-css-build/foundation/_settings-full-fat.scss
+++ b/css/ebi-css-build/foundation/_settings-full-fat.scss
@@ -4,10 +4,10 @@
  * It is the default an we expect it to be the most commonly used version.
  */
 
- @import '../ebi_dev_note';
+@import '../ebi_dev_note';
 
 // Include the common settings
-@import 'settings-common';
+@import 'settings-common-foundation';
 
 // 38. Invoke build process
 // ------------------------
