--- a/css/ebi-css-build/foundation/_settings-lite.scss
+++ b/css/ebi-css-build/foundation/_settings-lite.scss
@@ -6,10 +6,10 @@
  * compatibility issues.
  */
 
- @import '../ebi_dev_note';
+@import '../ebi_dev_note';
 
 // Include the common settings
-@import 'settings-common';
+@import 'settings-common-foundation';
 
 // 38. Invoke build process
 // ------------------------
