--- a/css/ebi-css-build/_ebi_utility_styles.scss
+++ b/css/ebi-css-build/_ebi_utility_styles.scss
@@ -50,6 +50,44 @@
     }
   }
 
+  /* List ...... leaders */
+  ul.leaders {
+    max-width: 40em;
+    padding: 0;
+    overflow-x: hidden;
+    list-style: none;
+
+    li:before {
+      float: left;
+      width: 0;
+      white-space: nowrap;
+      content:
+         ". . . . . . . . . . . . . . . . . . . . "
+         ". . . . . . . . . . . . . . . . . . . . "
+         ". . . . . . . . . . . . . . . . . . . . "
+         ". . . . . . . . . . . . . . . . . . . . ";
+    }
+
+    span:first-child {
+      padding-right: 0.33em;
+      background: white;
+    }
+    span + span {
+      float: right;
+      padding-left: 0.33em;
+      background: white;
+    }
+  }
+
+  // List: inline horizontal
+  ul.inline li { display: inline-block; }
+  // List: icon bullets
+  li.icon-bullet { list-style-type: none; text-indent: -1.3em; }
+
+  // Badge list
+  ul li a.badge,
+  ul li.badge { font-size: inherit; }
+
   // custom spacing
   .margin-top-none { margin-top: 0; }
   .margin-top-xsmall { margin-top: .1rem; }
