--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -101,6 +101,9 @@ a:active {
 .white-background {
   @at-root a#{&}, &, &.button, &.button:hover, &.tag { background: $ebi-colour-white; }
 }
+.black-background {
+  @at-root a#{&}, &, &.button, &.button:hover, &.tag { background: $black; }
+}
 .secondary-background {
   @at-root a#{&}, &, &.button, &.button:hover, &.tag { background: $ebi-colour-dark-grey; }
 }
@@ -142,6 +145,11 @@ a:active {
 .white-color {
   @at-root .label#{&}, .button#{&}, a#{&}, a:hover#{&}, &, & cite, & a, & a:hover, & a:visited, & h3, & h4 {
     color: $ebi-colour-white;
+  }
+}
+.black-color {
+  @at-root .label#{&}, .button#{&}, a#{&}, a:hover#{&}, &, & cite, & a, & a:hover, & a:visited, & h3, & h4 {
+    color: $black;
   }
 }
 .secondary-color {
