--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -87,6 +87,7 @@ a:active {
 .industry-background, a.industry-background, .tag.industry-background, .button.industry-background  { background: $ebi-colour-industry; }
 .elixir-background, a.elixir-background, .tag.elixir-background, .button.elixir-background    { background: $ebi-colour-elixir; }
 .white-background, a.white-background, .tag.white-background, .button.white-background     { background: $ebi-colour-white; }
+.black-background, a.black-background, .tag.black-background, .button.black-background     { background: $black; }
 .tag.secondary,
 .secondary-background, a.secondary-background, .tag.secondary-background, .button.secondary-background { background: $ebi-colour-dark-grey; }
 .medium-gray-background, a.medium-gray-background, .tag.medium-gray-background, .button.medium-gray-background { background: $ebi-colour-medium-grey; }
@@ -98,6 +99,7 @@ a:active {
 .industry-color, .industry-color cite, .industry-color a, .industry-color a:visited, .industry-color h3, .industry-color h4, .label.industry-color, a.industry-color, a:hover.industry-color { color: $ebi-colour-industry; }
 .elixir-color, .elixir-color cite, .elixir-color a, .elixir-color a:visited, .elixir-color h3, .elixir-color h4, .label.elixir-color, a.elixir-color, a:hover.elixir-color { color: $ebi-colour-elixir; }
 .white-color, .white-color cite, .white-color a, .white-color a:visited, .white-color h3, .white-color h4, .label.white-color, a.white-color, a:hover.white-color { color: $ebi-colour-white; }
+.black-color, .black-color cite, .black-color a, .black-color a:visited, .black-color h3, .black-color h4, .label.black-color, a.black-color, a:hover.black-color { color: $black; }
 .secondary-color, .secondary-color cite, .secondary-color a, .secondary-color a:visited, .secondary-color h3, .secondary-color h4, .label.secondary-color, a.secondary-color, a:hover.secondary-color {color: $ebi-colour-dark-grey;}
 .medium-gray-color, .medium-gray-color cite, .medium-gray-color a, .medium-gray-color a:visited, .medium-gray-color h3, .medium-gray-color h4, .label.medium-gray-color, a.medium-gray-color, a:hover.medium-gray-color {color: $ebi-colour-medium-grey;}
 
