--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -29,6 +29,8 @@ $alert-color: #ec5840;
 $light-gray: #e6e6e6;
 $medium-gray: $ebi-colour-medium-grey;
 $dark-gray: #8a8a8a;
+$black: #0a0a0a;
+$white: $ebi-colour-white;
 
 $body-background: $ebi-colour-white;
 $body-font-color: $ebi-colour-dark;
