--- a/css/ebi-css-build/ebi-global.scss
+++ b/css/ebi-css-build/ebi-global.scss
@@ -14,8 +14,8 @@
 @import 'embl_selector'; // EMBL Dropdown selector for .masthead-black-bar
 
 // simple imports for the font while we test
-@import 'https://code.cdn.mozilla.net/fonts/fira.css';
-@import 'https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css';
+// @import 'https://code.cdn.mozilla.net/fonts/fira.css';
+// @import 'https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css';
 
 // ebi-styles
 @if $include-ebi-global-styles {
